create controller to get  single propery by id
