# apps/backend/property-service/src/controllers/property.controller.ts
@@ -11,10 +11,10 @@ import {
   Put,
   Path,
   Tags,
-  Request
+  Request,
 } from "tsoa";
 import { PropertyService } from "@/src/services/property.service";
-import { RequestPropertyDTO, RequestUpdatePropertyDTO, ResponseAllPropertyDTO, ResponseCreatePropertyDTO, ResponseUpdatePropertyDTO } from "@/src/utils/types/indext";
+import { RequestPropertyDTO, RequestUpdatePropertyDTO, ResponseAllPropertyDTO, ResponseCreatePropertyDTO, ResponsePropertyDTO, ResponseUpdatePropertyDTO } from "@/src/utils/types/indext";
 import { Request as Express } from "express";
 import { UnauthorizedError } from "../utils/error/customErrors";
 // ====================================================================
@@ -119,7 +119,18 @@ export class PropertyController extends Controller {
       throw error
     }
   }
-
+// Controller get single
+@Get("/properties/get/{propertyId}")
+public async fetchPropertyByID(@Path() propertyId: string): Promise<ResponsePropertyDTO> {
+  console.log(propertyId);
+  try {
+    console.log("Request get id");
+    return await this.propertyService.getPropertyByID(propertyId);
+  } catch (error) {
+    console.log(error)
+    throw error;
+  }
+}
   @Get("/properties/me")
   public async getPropertyMe(
     @Query() title?: string,
